--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,13 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2
+$primary   : #027BE3
 $secondary : #26A69A
 $accent    : #9C27B0
 
-$dark      : #1D1D1D
+$dark      : #1d1d1d
 
 $positive  : #21BA45
-$negative  : #C10015
+$negative  : #5c040e
 $info      : #31CCEC
 $warning   : #F2C037
